--- a/.env.example
+++ b/.env.example
@@ -51,7 +51,8 @@ PGSSLMODE=
 # Required for Vercel hosting - set NEXTAUTH_URL to equal your BASE_URL
 # NEXTAUTH_URL='http://localhost:3000'
 NEXTAUTH_URL=
-NEXTAUTH_SECRET='secret'
+# @see: https://next-auth.js.org/errors#session-handling
+NEXTAUTH_SECRET=
 # Used for cross-domain cookie authentication
 NEXTAUTH_COOKIE_DOMAIN=.example.com
 
